--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://13.233.96.144:9000/</sonar.host.url>
-                <sonar.login>1bb9d72d712298188144b1c4fea87030a154b7ab</sonar.login>
+                <sonar.login>33e4e8b085470afbaf9ae70214469d71e5ef8234/</sonar.login>
 		<!--<sonar.password>admin</sonar.password> -->  
               
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
