--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://3.108.65.81:9000/</sonar.host.url>
                 <sonar.login>33e4e8b085470afbaf9ae70214469d71e5ef8234/</sonar.login>
-		<!--<sonar.password>admin</sonar.password> -->  
+		<!--<sonar.password>chinni@20</sonar.password> -->  
               
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
