--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://3.110.176.4:9000/</sonar.host.url>
-                <sonar.login>a9e9a25a55583af8628c99f568bb236071883a29/</sonar.login>
-		<!--<sonar.password>janu1995@</sonar.password> -->  
+		<sonar.host.url>http://3.110.176.4:9000</sonar.host.url>
+                <sonar.login>admin</sonar.login>
+		<sonar.password>admin</sonar.password>  
               
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
