--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.109.209.67:9177/mithunsolutions/repository/wallmart-release/</url>
+	      <name>Wallmart Releases Repository</name>
+	      <url>http://13.234.67.141:9177/mithunsolutions/repository/wallmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.109.209.67:9177/mithunsolutions/repository/wallmart-snapshot/</url>
+	      <name>Wallmart Snapshot Repository </name>
+	      <url>http://13.234.67.141:9177/mithunsolutions/repository/wallmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
